  track.
- Bug which rendered incremental search unusable implemented (thanks 
  to sundin from vdrportal)
- progress display: if the progress of the whole selection is shown,
  the current title will be displayed and not the name of the selection
- if you use an order like Interpret/Album/Tracks and all songs
  have the same track number, instantly playing any of them played
  them all. Fixed
- muggle can now import genre1 from id3v2 tags (the TCON tag). Only the
  first genre is imported, and refinements will be ignored. But
  this allows you to define your own genres. If you use the genre
  hierarchies, they will show up under 'Extra'
- import items from the setup menu: This is done by a background thread.
  Those threads are not allowed to access the OSD, so we removed the
  status messages of the import progress.
- mugglei: import counter counts only successes.
- mugglei: do not change directory to TLD before starting the import.
  mugglei has to be started in TLD or below. This way wildcards will
  always be expanded as expected.
- when tracks are added to the playing list, the playlist progress
  did not get updated.

2005-10-xx: Version 0.1.9-BETA
- Code that selects images factored out into an image provider class (mg_image_provider.h,c)
- Current image provider simplay displays all images in the directory of the current song
- Images are now converted in the background so that music replay starts immediately
- Implement new Service interface: service ReplayDirectoryImages displays all images in directory passed via service request (char* as Data parameter to service request)
- Added a patch for the image plugin (against 0.2.3) that uses muggle for displaying selected images while listening to music
- adapt SQL tables for use with mySQL 5.0. The structures are compatible with GiantDisc (same changes introduced there)
- Fix for incremental search entered again
- Several minor fixes