@@ -11,6 +11,7 @@
 
     \subsection bugs Bugs and testing needed
        - Cover images from id3 tags
+       - When no tags in file can be found and no 
 
     \subsection urgentosd OSD-related Issues
        - Move items within playlists
